<resources>
    <string name="app_name">Manager</string>

    <string name="tap_twice_to_exit">tap_twice_to_exit</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_ip">IP</string>
    <string name="prompt_port">Port</string>
    <string name="action_submit">Submit</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="activity_back">Back</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="delivery">delivery</string>
    <string name="check_main">ReportWork</string>
    <string name="product_batch_number">product batch number</string>
    <string name="Bar_code">Bar code</string>
    <string name="Library_number">Library number</string>
    <string name="Order_number">Order number</string>
    <string name="Number_per_box">Number per box</string>
    <string name="Number_of_boxes">Number of boxes</string>
    <string name="Thousand_weight">Thousand weight </string>

    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="app_title">Shanghai xxx guanlixitong</string>
    <string name="title_activity_delivery">DeliveryActivity</string>
    <string name="title_activity_entry">EntryActivity</string>
    <string name="title_activity_check">CheckActivity</string>
    <string name="entry">entry</string>
    <string name="report_main">report</string>
    <string name="report_cardid">report cardid</string>
    <string name="current_process">current process</string>
    <string name="Product_Specification">specification</string>
    <string name="report_state">state</string>
    <string name="numbers">numbers</string>
    <string name="number_applications">number_applications</string>
    <string name="Delivery_detail">detail</string>
    <string name="container_weight">container_weight</string>
    <string name="report_thousand_weight">report_thousand_weight</string>
    <string name="net_weight">net weight</string>
    <string name="waste">waste</string>
    <string name="gross_weight">gross_weight</string>
    <string name="report_num">report_num</string>
    <string name="container_id">container id</string>
    <string name="action_inspect_cancel">inspect_cancel</string>
    <string name="action_inspect_ng">nspect_ng</string>
    <string name="action_inspect_pass">inspect_pass</string>
    <string name="action_material">material</string>
    <string name="action_material_cancel">material_cancel</string>
    <string name="action_report">report</string>
    <string name="action_report_cancel">report_cancel</string>
    <string name="Inventory_quantity">Inventory_quantity</string>
    <string name="Inventory_quantity_of_boxes">Inventory_quantity_of_boxes</string>
    <string name="Number_in">Number_in</string>
    <string name="order_id">order_id</string>
    <string name="process_name">process_name</string>
    <string name="quantity_in">quantity_in</string>
    <string name="report_number">report_number</string>
    <string name="report_quantity">report_quantity</string>
    <string name="product_orderid">work order id</string>
    <string name="entry_bill_number">entry bill number</string>
    <string name="entry_action_submit">submit</string>
    <string name="action_scan">scan</string>
    <string name="action_scan_cancle">cancle scan</string>
    <string name="action_submit_cancle">action_submit_cancle</string>
    <string name="action_warehouse">action_warehouse</string>
    <string name="entry_production">entry_production</string>
    <string name="entry_warehouse">entry_warehouse</string>
    <string name="Final_box">Final_box</string>
    <string name="entry_isfinalbox">entry_isfinalbox</string>
    <string name="entry_warehouse_code">warehouse_code</string>
    <string name="entryin_orderid">entryin_orderid</string>
    <string name="product_item">product</string>
    <string name="prompt_db">database</string>
    <string name="entrychoice_num">choice num</string>
    <string name="Num_of_boxes">Num_of_boxes</string>
    <string name="entry_time">entry_time</string>
    <string name="action_stopruncard">action_stopruncard</string>
    <string name="split_container_no">split_container_no</string>
    <string name="split_container_weight">split_container_weight</string>
    <string name="split_merge_type">split_merge_type</string>
    <string name="thisbatch_of_boxes">thisbatch_of_boxes</string>
    <string name="thisbatch_of_boxes_num">thisbatch_of_boxes_num</string>
    <string name="merge_cardid">merge_cardid</string>
    <string name="instock_of_boxes_num">instock_of_boxes_num</string>
    <string name="instock_of_boxes">instock_of_boxes</string>
    <string name="front_of_boxes_num">front_of_boxes_num</string>
    <string name="front_of_boxes">front_of_boxes</string>
    <string name="available_of_boxes">available_of_boxes</string>
    <string name="available_of_boxes_num">available_of_boxes_num</string>
    <string name="check_main_inspect">check_main_inspect</string>
    <string name="check_main_material">check_main_material</string>
    <string name="manufacture_main">manufacture_main</string>
    <string name="search_inventory_main">search_inventory_main</string>
    <string name="check_warehouse_code">check_warehouse_code</string>
    <string name="check_warehouse_name">check_warehouse_name</string>
    <string name="weight">weight</string>
    <string name="action_search">action_search</string>
    <string name="inventory_orderno">inventory_orderno</string>
    <string name="delivery_check">report_check</string>
    <string name="report_default_loc">report_default_loc</string>
    <string name="package_name">package_name</string>
    <string name="equipment_code">equipment_code</string>
    <string name="split_grossweight">split_grossweight</string>
    <string name="product_plan">product_plan</string>
    <string name="order_state">order_state</string>
    <string name="state">state</string>
    <string name="action_pause">pause</string>
    <string name="action_start">start</string>
    <string name="check_productmeterial_main">check_productmeterial</string>
    <string name="material_orderid">material_orderid</string>
    <string name="material_orderdate">orderdate</string>
    <string name="material_package_name">package_name</string>
    <string name="material_diameter">diameter</string>
    <string name="material_furnace_no">furnace_no</string>
    <string name="material_locationbarcode">locationbarcode</string>
    <string name="material_lot_nos">lot_nos</string>
    <string name="material_name">material_name</string>
    <string name="material_packagenum">packagenum</string>
    <string name="material_packageqty">packageqty</string>
    <string name="material_productcode">productcode</string>
    <string name="material_supplier_code">supplier_code</string>
    <string name="material_branname">branname</string>
    <string name="unit">unit</string>
    <string name="work_team">work_team</string>
</resources>
