<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0eff4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:background="#f3f7f6">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/entry_warehouse"
                android:textColor="#4f92ed"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/entryform_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:onClick="onClick"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dip"
                    android:layout_height="20dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="3dip"
                    android:src="@mipmap/icon_arrow_left" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:text="@string/activity_back"
                    android:textColor="#4f92ed"
                    android:textSize="19sp" />
            </LinearLayout>
        </RelativeLayout>

        <include layout="@layout/include_line" />

        <ScrollView
            android:id="@+id/entryform_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:id="@+id/entryform_content_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/entryform_orderid_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/entryin_orderid" />

                    <EditText
                        android:id="@+id/entryform_orderid"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/black" />
                    <ImageView
                        android:id="@+id/entryform_orderid_button"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="@dimen/erqode_vertical_margin"
                        android:clickable="true"
                        android:onClick="onClick"
                        android:background="@mipmap/ercode" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/entryform_warehouse_code_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/entry_warehouse_code" />

                    <EditText
                        android:id="@+id/entryform_warehouse_code"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/black" />
                    <ImageView
                        android:id="@+id/entryform_warehouse_code_button"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="@dimen/erqode_vertical_margin"
                        android:clickable="true"
                        android:onClick="onClick"
                        android:background="@mipmap/ercode" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/entryform_Bar_code_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/Bar_code" />

                    <EditText
                        android:id="@+id/entryform_bar_code"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/black" />
                    <ImageView
                        android:id="@+id/entryform_bar_code_button"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="@dimen/erqode_vertical_margin"
                        android:clickable="true"
                        android:onClick="onClick"
                        android:background="@mipmap/ercode" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/entryform_Order_number_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/Order_number" />

                    <EditText
                        android:id="@+id/entryform_order_number"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/entryform_Number_per_box_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/Number_per_box" />

                    <EditText
                        android:id="@+id/entryform_Number_per_box"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:digits="1234567890."
                        android:inputType="phone|number"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/entryform_num_boxes_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/Number_of_boxes" />

                    <EditText
                        android:id="@+id/entryform_num_boxes"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:digits="1234567890"
                        android:inputType="phone|number"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/entryform_finalbox_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/entry_isfinalbox" />

                    <CheckBox
                        android:id="@+id/entryform_finalbox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/entryform_scan"
                        style="?android:textAppearanceSmall"
                        android:onClick="onClick"
                        android:background="@color/colorbarbackground"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:text="@string/action_scan"
                        android:textStyle="bold" />
                    <Button
                        android:id="@+id/entryform_canclescan"
                        style="?android:textAppearanceSmall"
                        android:onClick="onClick"
                        android:background="@color/colorbarbackground"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:text="@string/action_scan_cancle"
                        android:textStyle="bold" />
                    <Button
                        android:id="@+id/entryform_submit_button"
                        style="?android:textAppearanceSmall"
                        android:onClick="onClick"
                        android:background="@color/colorbarbackground"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:text="@string/entry_action_submit"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical"
                    android:background="@color/transport_int">
                    <TextView
                        android:id="@+id/entry_errmsg"
                        android:textColor="@color/red"
                        android:visibility="gone"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:text="@string/order_id"
                            android:layout_weight="1"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:text="@string/product_item"
                            android:layout_weight="1"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:text="@string/report_num"
                            android:layout_weight="1"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/Number_of_boxes"
                            android:layout_weight="1"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/Final_box"
                            android:layout_weight="1"/>
                    </LinearLayout>
                    <ListView
                        android:id="@+id/entry_infolist"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/c_e6e1db">

                    </ListView>
                </LinearLayout>
            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</RelativeLayout>
